<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_sign_up"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
    />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_title"
        android:text="@string/description_sign_up"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textColor="#666666"
    />

    <EditText
        android:id="@+id/editText_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_description"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/full_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_full_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/editText_email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_below="@id/editText_confirmPassword"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:inputType="phone" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_phone"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:text="@string/sign_up" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@id/button_sign_up"
       android:gravity="center_horizontal"
       >

       <TextView
           android:id="@+id/textView_confirm_sign_up"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/confirm_sign_up"
           android:textSize="16sp"
           android:layout_marginTop="16dp"
           android:textColor="#666666"
           android:textStyle="bold"
           android:layout_marginEnd="5dp"
           />

       <TextView
           android:id="@+id/textView_log_in"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/log_in"
           android:textSize="16sp"
           android:layout_marginTop="16dp"
           android:textColor="@color/primary"
           android:textStyle="bold"
           android:onClick="goToLoginActivity"
           />

   </LinearLayout>

</RelativeLayout>